--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ h2 {
     <br>
     <div class="first">
 
-        <img src="Sample Image\big-brother-little-sister-newborn-session_0004.jpg" class="reo" width="450" style="margin-right: 3mm; margin-top: 25px;">    
+        <img src="https://github.com/Aditya2213/responsive/blob/main/big-brother-little-sister-newborn-session_0004.jpg" class="reo" width="450" style="margin-right: 3mm; margin-top: 25px;">    
         <h2 style="color:#66FCF1;"> A SMALL LETTER TO MY SISTER</h2>
     
         <p class="one"> <b> Dear Sister, </b> </p> 
