--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ h2 {
     font-size:20px; 
     text-align: center;
     width:65%;
-    margin:5mm;
+    margin-top:5mm;
 }
 
 .reo {
@@ -55,7 +55,7 @@ h2 {
     <br>
     <div class="first">
 
-        <img src="https://github.com/Aditya2213/responsive/blob/main/big-brother-little-sister-newborn-session_0004.jpg" class="reo" width="450" style="margin-right: 3mm; margin-top: 25px;">    
+        <img src="big-brother-little-sister-newborn-session_0004.jpg" class="reo" width="450" style="margin-right: 3mm; margin-top: 25px;">    
         <h2 style="color:#66FCF1;"> A SMALL LETTER TO MY SISTER</h2>
     
         <p class="one"> <b> Dear Sister, </b> </p> 
